--- a/ui/src/customizeBootstrap.css
+++ b/ui/src/customizeBootstrap.css
@@ -22,3 +22,17 @@
   #mainNav .navbar-nav li.nav-item a.nav-link.active {
     color: black;
   }
+
+  .address-list {
+    font-size: 80%; 
+    opacity: 0.2;
+    margin-bottom: 1.5em;
+    -webkit-transition: opacity 0.4s ease;
+    -moz-transition: opacity 0.4s ease;
+    -o-transition: opacity 0.4s ease;
+    transition: opacity 0.4s ease;
+  }
+  .address-list:hover {
+    opacity: 0.7;
+  }
+  
