--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,9 +1,36 @@
+:root {
+  --site-width: 60rem;
+  --main-color: #3f51b5;
+}
+
+body {
+  background-color: #ececf77d !important;
+  color: #444;
+}
+
+* {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+/* Suppress react-router-dom <a> styles */
+.router-link {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.site-width {
+  max-width: var(--site-width);
+  margin: 0 auto;
+}
+
+.main-section {
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
